feat: temp version without working hibernate search