@@ -16,19 +16,19 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.7.5</version>
+    <version>3.0.0</version>
     <relativePath/> <!-- lookup parent from repository -->
   </parent>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <java.version>11</java.version>
+    <java.version>17</java.version>
     <keycloak.version>17.0.0</keycloak.version>
     <!-- force at least version 2.16 due to https://logging.apache.org/log4j/2.x/security.html -->
     <log4j.version>2.17.1</log4j.version>
-    <openapi.generator.maven.version>6.2.1</openapi.generator.maven.version>
-    <hibernate-search-orm.version>5.11.10.Final</hibernate-search-orm.version>
+    <openapi.generator.maven.version>6.6.0</openapi.generator.maven.version>
+<!--    <hibernate-search-orm.version>5.11.12.Final</hibernate-search-orm.version>-->
     <jackson-databind-nullable.version>0.2.3</jackson-databind-nullable.version>
     <javax.ws.rs-api.version>2.1.1</javax.ws.rs-api.version>
     <commons-lang3.version>3.11</commons-lang3.version>
@@ -37,12 +37,17 @@
     <powermock-module-junit4.version>2.0.2</powermock-module-junit4.version>
     <ehcache.version>2.10.6</ehcache.version>
     <easy-random-core.version>5.0.0</easy-random-core.version>
-    <spring-boot-autoconfigure.version>2.7.5</spring-boot-autoconfigure.version>
+<!--    <spring-boot-autoconfigure.version>2.7.5</spring-boot-autoconfigure.version>-->
     <liquibase-core.version>4.9.1</liquibase-core.version>
     <springfox-boot-starter.version>3.0.0</springfox-boot-starter.version>
-    <spring-security-core.version>5.7.5</spring-security-core.version>
+    <spring-security.version>6.0.4</spring-security.version>
     <springfox.version>2.9.2</springfox.version>
     <springfox-swagger-ui.version>2.10.0</springfox-swagger-ui.version>
+    <spring-security-oauth2-test-webmvc-addons.version>3.0.1</spring-security-oauth2-test-webmvc-addons.version>
+    <maven.compiler.source>17</maven.compiler.source>
+    <maven.compiler.target>17</maven.compiler.target>
+    <hibernate.search.version>6.1.1.Final</hibernate.search.version>
+
   </properties>
 
   <dependencies>
@@ -71,28 +76,119 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-validation</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
+    </dependency>
 
     <dependency>
       <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-web</artifactId>
+      <version>${spring-security.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.security</groupId>
       <artifactId>spring-security-config</artifactId>
-      <version>${spring-security-core.version}</version>
+      <version>${spring-security.version}</version>
     </dependency>
     <dependency>
       <groupId>org.springframework.security</groupId>
       <artifactId>spring-security-core</artifactId>
-      <version>${spring-security-core.version}</version>
+      <version>${spring-security.version}</version>
     </dependency>
     <!-- Spring actuator  -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-actuator</artifactId>
     </dependency>
-    <!-- Search dependencies -->
+
+
+    <dependency>
+      <groupId>org.hibernate.search</groupId>
+      <artifactId>hibernate-search-mapper-orm</artifactId>
+      <version>${hibernate.search.version}</version>
+      <exclusions>
+      <exclusion>
+        <groupId>org.hibernate</groupId>
+        <artifactId>hibernate-core</artifactId>
+      </exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>org.hibernate.search</groupId>
+      <artifactId>hibernate-search-backend-lucene</artifactId>
+      <version>${hibernate.search.version}</version>
+    </dependency>
     <dependency>
       <groupId>org.hibernate</groupId>
       <artifactId>hibernate-search-orm</artifactId>
-      <version>${hibernate-search-orm.version}</version>
+      <version>5.11.12.Final</version>
+      <exclusions>
+      <exclusion>
+        <groupId>org.hibernate</groupId>
+        <artifactId>hibernate-core</artifactId>
+      </exclusion>
+      </exclusions>
     </dependency>
+    <!-- Search dependencies -->
+<!--    <dependency>-->
+<!--      <groupId>org.hibernate.search</groupId>-->
+<!--      <artifactId>hibernate-search-engine</artifactId>-->
+<!--      <version>6.2.0.Final</version>-->
+<!--    </dependency>-->
+<!--    <dependency>-->
+<!--      <groupId>org.hibernate</groupId>-->
+<!--      <artifactId>hibernate-search-orm</artifactId>-->
+<!--      <version>${hibernate-search-orm.version}</version>-->
+<!--      <exclusions>-->
+<!--        <exclusion>-->
+<!--          <groupId>org.hibernate</groupId>-->
+<!--          <artifactId>hibernate-core</artifactId>-->
+<!--        </exclusion>-->
+<!--        <exclusion>-->
+<!--          <groupId>org.hibernate</groupId>-->
+<!--          <artifactId>hibernate-search</artifactId>-->
+<!--        </exclusion>-->
+<!--      </exclusions>-->
+<!--    </dependency>-->
+<!--    <dependency>-->
+<!--      <groupId>org.hibernate.search</groupId>-->
+<!--      <artifactId>hibernate-search-v5migrationhelper-orm</artifactId>-->
+<!--      <version>6.2.0.Final</version>-->
+<!--      <exclusions>-->
+<!--        <exclusion>-->
+<!--          <groupId>org.hibernate</groupId>-->
+<!--          <artifactId>hibernate-core</artifactId>-->
+<!--        </exclusion>-->
+<!--      </exclusions>-->
+<!--    </dependency>-->
+<!--    &lt;!&ndash; needed for hibernate search &ndash;&gt;-->
+<!--    <dependency>-->
+<!--      <groupId>javax.persistence</groupId>-->
+<!--      <artifactId>javax.persistence-api</artifactId>-->
+<!--      <version>2.2</version>-->
+<!--    </dependency>-->
+<!--    <dependency>-->
+<!--      <groupId>org.hibernate</groupId>-->
+<!--      <artifactId>hibernate-entitymanager</artifactId>-->
+<!--      <version>5.6.15.Final</version>-->
+<!--    </dependency>-->
+<!--    <dependency>-->
+<!--      <groupId>javax.transaction</groupId>-->
+<!--      <artifactId>jta</artifactId>-->
+<!--      <version>1.1</version>-->
+<!--    </dependency>-->
+<!--    <dependency>-->
+<!--      <groupId>org.hibernate.search</groupId>-->
+<!--      <artifactId>hibernate-search-mapper-orm-jakarta</artifactId>-->
+<!--      <version>6.2.0.Final</version>-->
+<!--      <exclusions>-->
+<!--        <exclusion>-->
+<!--          <groupId>org.hibernate.common</groupId>-->
+<!--          <artifactId>hibernate-commons-annotations</artifactId>-->
+<!--        </exclusion>-->
+<!--      </exclusions>-->
+<!--    </dependency>-->
 
     <!-- OpenApi/Swagger dependencies -->
     <dependency>
@@ -189,10 +285,10 @@
       <artifactId>liquibase-maven-plugin</artifactId>
       <version>${liquibase-maven-plugin.version}</version>
     </dependency>
+
     <dependency>
-      <groupId>org.liquibase</groupId>
-      <artifactId>liquibase-core</artifactId>
-      <version>${liquibase-core.version}</version>
+      <groupId>org.apache.httpcomponents.client5</groupId>
+      <artifactId>httpclient5</artifactId>
     </dependency>
 
     <!-- Test scope dependencies -->
@@ -271,12 +367,16 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-autoconfigure</artifactId>
-      <version>${spring-boot-autoconfigure.version}</version>
     </dependency>
     <dependency>
       <groupId>org.yaml</groupId>
       <artifactId>snakeyaml</artifactId>
       <version>2.0</version>
+    </dependency>
+    <dependency>
+      <groupId>io.swagger.core.v3</groupId>
+      <artifactId>swagger-annotations</artifactId>
+      <version>2.2.15</version>
     </dependency>
   </dependencies>
 
@@ -309,6 +409,7 @@
               <configOptions>
                 <interfaceOnly>true</interfaceOnly>
                 <sourceFolder>/</sourceFolder>
+                <useSpringBoot3>true</useSpringBoot3>
               </configOptions>
               <inputSpec>${project.basedir}/api/agencyservice.yaml</inputSpec>
               <generatorName>spring</generatorName>
@@ -328,6 +429,7 @@
               <configOptions>
                 <interfaceOnly>true</interfaceOnly>
                 <sourceFolder>/</sourceFolder>
+                <useSpringBoot3>true</useSpringBoot3>
               </configOptions>
               <inputSpec>${project.basedir}/api/agencyadminservice.yaml</inputSpec>
               <generatorName>spring</generatorName>
@@ -369,6 +471,7 @@
                 <sourceFolder>/</sourceFolder>
                 <library>resttemplate</library>
                 <dateLibrary>java8</dateLibrary>
+                <useSpringBoot3>true</useSpringBoot3>
               </configOptions>
               <inputSpec>${project.basedir}/services/useradminservice.yaml</inputSpec>
               <generatorName>java</generatorName>
@@ -393,6 +496,7 @@
                 <sourceFolder>/</sourceFolder>
                 <library>resttemplate</library>
                 <dateLibrary>java8</dateLibrary>
+                <useSpringBoot3>true</useSpringBoot3>
               </configOptions>
               <inputSpec>${project.basedir}/services/consultingtypeservice.yaml</inputSpec>
               <generatorName>java</generatorName>
@@ -418,6 +522,7 @@
                 <sourceFolder>/</sourceFolder>
                 <library>resttemplate</library>
                 <dateLibrary>java8</dateLibrary>
+                <useSpringBoot3>true</useSpringBoot3>
               </configOptions>
               <inputSpec>${project.basedir}/services/applicationsettingsservice.yml</inputSpec>
               <generatorName>java</generatorName>
@@ -443,6 +548,7 @@
                 <sourceFolder>/</sourceFolder>
                 <library>resttemplate</library>
                 <dateLibrary>java8</dateLibrary>
+                <useSpringBoot3>true</useSpringBoot3>
               </configOptions>
               <inputSpec>${project.basedir}/services/tenantservice.yaml</inputSpec>
               <generatorName>java</generatorName>
@@ -545,10 +651,20 @@
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>17</source>
+          <target>17</target>
+          <compilerArgs>--enable-preview</compilerArgs>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin
         </artifactId> <!-- surefire plugin version managed by Spring Boot -->
         <configuration>
           <skipTests>true</skipTests>
+          <argLine>--enable-preview</argLine>
         </configuration>
         <executions>
           <execution>
